<resources>
    <string name="app_name">Engrisuru</string>
    <string name="title_activity_main">Engrisuru</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="choose_kanji_grade_range">Choose kanji grade range (11 means ungraded kanji)</string>
    <string name="select_kanji_activities">Select types of kanji questions (default is English meanings)</string>
    <string name="kanji_onyomi_readings">On\'yomi readings</string>
    <string name="kanji_kunyomi_readings">Kun\'yomi readings</string>
    <string name="kanji_english_meanings">English meanings</string>
    <string name="kanji_gentle_mode">Gentle mode (learn kanji in small portions)</string>
    <!--    <string name="onyomi_radings"></string>-->
<!--    <string name="onyomi_radings"></string>-->
<!--    <string name="onyomi_radings"></string>-->
    <string-array name="kanji_grade_labels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="spinner_choose_module_options">
        <item>Choose translation module</item>
        <item>Eng-rus simple</item>
        <item>Kanji-eng (kanjidic)</item>
    </string-array>
</resources>
